# simple-saml

./: .pre-commit-config.yaml  .readthedocs.yaml  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
docs/: conf.py  index.rst  requirements.txt
simple_saml/: __init__.py
tests/: test_pytest_works.py
